restart/_webparts.scss
// web parts
// faq
.accordion-item,
.accordion-item:last-child {
	border-bottom: 1px solid $blue !important;
	.accordion-header {
		.accordion-button {
			font-family: 'DINPro';
			padding: 0;
			font-size: 1.35rem;
			color: $darkblue;
			background: white;
			justify-content: space-between;
			.bi.bi-plus {
				transition: 0.25s all;
				font-size: 2.5rem;
				color: $blue;
			}
			&.collapsed {
				font-weight: 600;
			}
			&:not(.collapsed) {
				font-weight: 700;
				font-size: 1.5rem;
				box-shadow: inset 0 -1px 0 $blue;
				.bi.bi-plus {
					transform: rotate(45deg);
				}
			}
			&::after {
				display: none;
			}
		}
	}
	.accordion-body {
		padding: 1rem 0;
		font-family: 'Roboto';
	}
}

//footer
.footer {
	background: $darkblue;
	text-align: center;
	color: $white;
	margin-top: 0 !important;
	padding-bottom: 0;
	a,
	p {
		color: $white;
		font-size: 1.25rem;
		line-height: 1.8;
	}
	.fab {
		width: 48px;
		height: 48px;
		text-decoration: none;
		color: $white;
		font-size: 2rem;
	}
	.copyright {
		font-family: 'Roboto';
		font-size: 1rem;
		a {
			font-size: 1rem;
			text-decoration: none;
		}
	}
}

